--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,16 +21,6 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
         
     - name: Build and push Docker images
     uses: docker/build-push-action@v1.1.0
@@ -42,7 +32,7 @@ jobs:
       # Server address of Docker registry. If not set then will default to Docker Hub
       registry: # optional
       # Docker repository to tag the image with
-      repository: animals-say
+      repository: siddharths2710/animals-say
       # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
       tags: # optional
       # Automatically tags the built image with the git reference as per the readme
