--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,59 +1,37 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+    tags:
+      - '*'
   pull_request:
-    branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    name: build
     runs-on: alpine
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    timeout-minutes: 3
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-        
-    - name: Build and push Docker images
-    uses: docker/build-push-action@v1.1.0
-    with:
-      # Username used to log in to a Docker registry. If not set then no login will occur
-      username: # optional
-      # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
-      password: # optional
-      # Server address of Docker registry. If not set then will default to Docker Hub
-      registry: # optional
-      # Docker repository to tag the image with
-      repository: siddharths2710/animals-say
-      # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
-      tags: # optional
-      # Automatically tags the built image with the git reference as per the readme
-      tag_with_ref: # optional
-      # Automatically tags the built image with the git short SHA as per the readme
-      tag_with_sha: # optional
-      # Path to the build context
-      path: # optional, default is .
-      # Path to the Dockerfile (Default is '{path}/Dockerfile')
-      dockerfile: # optional
-      # Sets the target stage to build
-      target: # optional
-      # Always attempt to pull a newer version of the image
-      always_pull: # optional
-      # Comma-delimited list of build-time variables
-      build_args: # optional
-      # Comma-delimited list of images to consider as cache sources
-      cache_froms: # optional
-      # Comma-delimited list of labels to add to the built image
-      labels: # optional
-      # Adds labels with git repository information to the built image
-      add_git_labels: # optional
-      # Whether to push the image
-      push: # optional, default is true
+
+    - name: Checkout
+      uses: actions/checkout@v2
+    
+    - name: Run local registry
+      run: docker run -d -p 5000:5000 registry:2
+    
+    - name: Build and push image
+      uses: ./
+      env:
+        DOCKER_BUILDKIT: 1
+      with:
+        registry: localhost:5000
+        repository: siddharths2710/animals-say
+        tags: foo
+      
+    - name: Remove local image
+      run: docker image rm localhost:5000/siddharths2710/animals-say:foo
+
+    - name: Run image from registry
+      run: docker run localhost:5000/siddharths2710/animals-say:foo
