--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
       with:
         registry: localhost:5000
         repository: siddharths2710/animals-say
-        tags: foo
+        tags: latest
       
     - name: Remove local image
-      run: docker image rm localhost:5000/siddharths2710/animals-say:foo
+      run: docker image rm siddharths2710/animals-say:latest
 
     - name: Run image from registry
-      run: docker run localhost:5000/siddharths2710/animals-say:foo
+      run: docker run siddharths2710/animals-say:latest
